name:                most-used
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gabebw/most-used#readme
license:             BSD3
license-file:        LICENSE
author:              Gabe Berke-Williams
maintainer:          gabebw@gabebw.com
copyright:           2017 Gabe Berke-Williams
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable most-used-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , most-used
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gabebw/most-used
