name:                most-used
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gabebw/most-used#readme
license:             BSD3
license-file:        LICENSE
author:              Gabe Berke-Williams
maintainer:          gabebw@gabebw.com
copyright:           2017 Gabe Berke-Williams
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MostUsed
                     , MostUsed.CLI
                     , MostUsed.CLI.Display
                     , MostUsed.CLI.Util
                     , MostUsed.Parser.Bash
                     , MostUsed.Parser.Common
                     , MostUsed.Parser.Zsh
                     , MostUsed.Types
                     , MostUsed.Version
  build-depends:       base >= 4.7 && < 5
                     , megaparsec == 5.2.0
                     , optparse-applicative == 0.13.2.0
                     , unordered-containers == 0.2.8.0
  default-language:    Haskell2010

executable most-used-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , most-used
                     , megaparsec == 5.2.0
                     , unordered-containers == 0.2.8.0
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base == 4.*
    , hspec == 2.*
    , megaparsec == 5.2.0
    , most-used
  other-modules: MostUsed.MostUsedSpec
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/gabebw/most-used
